# connectify

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yaml  workflow.yml
cli/: connectify_cli.py
connectify/: __init__.py  config.py  errors.py  http.py  weather.py
tests/: test_weather.py
